--- a/CursoOnline/test/CursoOnline.Domain.Tests/CursoOnline.Domain.Tests.csproj
+++ b/CursoOnline/test/CursoOnline.Domain.Tests/CursoOnline.Domain.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="34.0.2" />
     <PackageReference Include="ExpectedObjects" Version="3.5.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="xunit" Version="2.4.1" />
