--- a/CursoOnline/test/CursoOnline.Domain.Tests/CursoOnline.Domain.Tests.csproj
+++ b/CursoOnline/test/CursoOnline.Domain.Tests/CursoOnline.Domain.Tests.csproj
@@ -21,4 +21,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\CursoOnline.Domain\CursoOnline.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
