--- a/CursoOnline/test/CursoOnline.Domain.Tests/CursoOnline.Domain.Tests.csproj
+++ b/CursoOnline/test/CursoOnline.Domain.Tests/CursoOnline.Domain.Tests.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Bogus" Version="34.0.2" />
     <PackageReference Include="ExpectedObjects" Version="3.5.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+    <PackageReference Include="Moq" Version="4.18.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
