Refatoração do codigo e adicionado persistencia de dados EF inMemory e criando ReposiorioBase

--- a/CursoOnline/test/CursoOnline.Domain.Tests/CursoOnline.Domain.Tests.csproj
+++ b/CursoOnline/test/CursoOnline.Domain.Tests/CursoOnline.Domain.Tests.csproj
@@ -23,6 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\CursoOnline.Application\CursoOnline.Application.csproj" />
+    <ProjectReference Include="..\..\src\CursoOnline.Dados\CursoOnline.Dados.csproj" />
     <ProjectReference Include="..\..\src\CursoOnline.Domain\CursoOnline.Domain.csproj" />
   </ItemGroup>
 
