--- a/CursoOnline/src/CursoOnline.Application/CursoOnline.Application.csproj
+++ b/CursoOnline/src/CursoOnline.Application/CursoOnline.Application.csproj
@@ -5,11 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.4" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\CursoOnline.Dados\CursoOnline.Dados.csproj" />
     <ProjectReference Include="..\CursoOnline.Domain\CursoOnline.Domain.csproj" />
   </ItemGroup>
 
