--- a/CursoOnline/test/CursoOnline.Domain.Tests/CursoOnline.Domain.Tests.csproj
+++ b/CursoOnline/test/CursoOnline.Domain.Tests/CursoOnline.Domain.Tests.csproj
@@ -8,6 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Bogus" Version="34.0.2" />
+    <PackageReference Include="coverlet.msbuild" Version="3.1.2">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="ExpectedObjects" Version="3.5.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="Moq" Version="4.18.0" />
